[MOD] : 판매자 수리사례 등록 수정2